--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -10,17 +10,16 @@
         android:label="@string/set_your_object"
         tools:layout="@layout/fragment_splash" >
         <action
-            android:id="@+id/action_splashFragment_to_objectSetUpFragment"
-            app:destination="@id/objectSetUpFragment" />
+            android:id="@+id/action_splashFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/my_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <dialog
         android:id="@+id/objectSetUpFragment"
         android:name="com.example.eshc_scanner.screens.ObjectSetUpFragment"
-        android:label="@string/set_call_time" >
-        <action
-            android:id="@+id/action_objectSetUpFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </dialog>
+        android:label="@string/set_call_time" />
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.eshc_scanner.screens.MainFragment"
