--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".screens.MainFragment">
 
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/mainFragmentToolbar"
         style="@style/toolBar"
@@ -19,14 +18,40 @@
 
 
     <TextView
-        android:id="@+id/mainFragmentTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_mainFragment"
+        android:id="@+id/mainFragmentTextViewName"
+        style="@style/textView_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainFragmentToolbar"
+        app:layout_constraintTop_toBottomOf="@+id/mainFragmentToolbar" />
 
-        />
+    <TextView
+        android:id="@+id/mainFragmentTextViewTime"
+        style="@style/textView_large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainFragmentTextViewName" />
+
+    <ImageButton
+
+        android:id="@+id/btnQR"
+        style="@style/button_QR"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:contentDescription=""
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSend"
+        style="@style/button_blue_save"
+        android:text="@string/send"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
