--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,8 +26,9 @@
     <color name="material_background">#E8E8E8</color>
     <color name="material_drawer_selected_text">#2196F3</color>
     <color name="custom_blue">#3300ff</color>
-    <color name="custom_gree">#00ffb3</color>
+    <color name="custom_green">#00ffb3</color>
     <color name="material_blue">#607D8B</color>
+    <color name="material_blue_transparent">#62607D8B</color>
     <color name="material_blue_dark">#37474F</color>
 
 
