--- a/app/src/main/res/drawable/btn_send_selector.xml
+++ b/app/src/main/res/drawable/btn_send_selector.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <selector xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:state_pressed="true"
-            android:drawable="@drawable/custom_button_save_enabled" /> <!-- pressed -->
-        <item android:state_enabled="false"
-            android:drawable="@drawable/custom_button_save" /> <!-- focused -->
-        <item android:drawable="@drawable/ic_qr_code_scanner_custom" /> <!-- default -->
-    </selector>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@drawable/button_save"
+        android:state_enabled="false" /> <!-- focused -->
+    <item android:drawable="@drawable/button_save_enabled"
+        android:state_pressed="true" /> <!-- pressed -->
+    <item android:drawable="@drawable/button_save_enabled"
+        android:state_pressed="false" /> <!-- pressed -->
+
+
+
+</selector>
 
