--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/margin_10</item>
-        <item name="android:background">@drawable/custom_button_save_enabled</item>
+        <item name="android:background">@drawable/btn_send_selector</item>
         <item name="android:elevation">@dimen/margin_main</item>
         <item name="android:text">@string/menu_save</item>
         <item name="android:textColor">@color/colorWhite</item>
@@ -78,8 +78,7 @@
     <style name="button_QR">
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:src">@drawable/qr_selector</item>
-        <item name="android:background">@color/colorGreyLight</item>
+        <item name="android:background">@drawable/qr_selector</item>
         <item name="android:elevation">0dp</item>
     </style>
 
