--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,40 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashFragment"
-    >
+    tools:context=".screens.HistoryFragment">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/fragmentView_toolbar"
+        android:id="@+id/fragmentHistory_toolbar"
+        style="@style/toolBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/toolBar"
-        >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/set_your_object"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/text_size_18"
-            android:textStyle="bold"
-            android:gravity = "center"
-            android:id="@+id/toolbar_title" />
-
-
-    </androidx.appcompat.widget.Toolbar>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFragmentView"
+        android:id="@+id/rvFragmentHistory"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentView_toolbar"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/fragmentHistory_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
