--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -26,10 +26,21 @@
             app:destination="@id/splashFragment"
             app:popUpTo="@id/my_nav"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_mainFragment_to_historyFragment"
+            app:destination="@id/historyFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left" />
     </fragment>
     <action
         android:id="@+id/action_global_mainFragment"
         app:destination="@id/mainFragment"
         app:popUpTo="@id/mainFragment"
         app:popUpToInclusive="true" />
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="com.example.eshc_scanner.screens.HistoryFragment"
+        android:label="@string/history"
+        tools:layout="@layout/fragment_history" />
 </navigation>
