--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -12,7 +12,10 @@
         <action
             android:id="@+id/action_splashFragment_to_mainFragment"
             app:destination="@id/mainFragment"
-            app:launchSingleTop="true"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right"
             app:popUpTo="@id/my_nav"
             app:popUpToInclusive="true" />
     </fragment>
@@ -24,6 +27,8 @@
         <action
             android:id="@+id/action_mainFragment_to_splashFragment"
             app:destination="@id/splashFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
             app:popUpTo="@id/my_nav"
             app:popUpToInclusive="true" />
         <action
@@ -31,13 +36,13 @@
             app:destination="@id/historyFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/from_left" />
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <action
         android:id="@+id/action_global_mainFragment"
         app:destination="@id/mainFragment"
-        app:popUpTo="@id/mainFragment"
-        app:popUpToInclusive="true" />
+        app:popUpTo="@id/my_nav" />
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.example.eshc_scanner.screens.HistoryFragment"
