--- a/app/src/main/res/layout/rv_item_mini.xml
+++ b/app/src/main/res/layout/rv_item_mini.xml
@@ -27,13 +27,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/phone_mini"
+            android:id="@+id/worker08"
             style="@style/rv_item_phone_textView_style"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/objectName_mini" />
 
         <TextView
-            android:id="@+id/mobile_mini"
+            android:id="@+id/time"
             style="@style/rv_item_phone_textView_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/objectName_mini" />
