--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -42,10 +42,15 @@
     <action
         android:id="@+id/action_global_mainFragment"
         app:destination="@id/mainFragment"
-        app:popUpTo="@id/my_nav" />
+        app:popUpTo="@id/my_nav"
+        app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.example.eshc_scanner.screens.HistoryFragment"
         android:label="@string/history"
-        tools:layout="@layout/fragment_history" />
+        tools:layout="@layout/fragment_history" >
+        <action
+            android:id="@+id/action_historyFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
 </navigation>
